cilium-cli/connectivity/builder/manifests/client-egress-to-echo-named-port-deny-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-ingress-to-echo-named-port-deny-ccnp
spec:
  endpointSelector:
    matchLabels:
      kind: echo
  ingressDeny:
  - toPorts:
    - ports:
      - port: "http-8080"
        protocol: TCP
    fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        name: client
